MAGNOLIA-2463 Escape input field values to prevent XSS attack from search box in toolbar in admininterface.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@19634 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractSimpleSearchList.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/lists/AbstractSimpleSearchList.html
@@ -1,1 +1,1 @@
-<input type="hidden" id="searchStr" name="searchStr" value="${this.searchStr}"/>
+<input type="hidden" id="searchStr" name="searchStr" value="${this.searchStr?html}"/>
