--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ExportPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ExportPage.html
@@ -37,7 +37,7 @@
         </select>
       </div>
       <input type="hidden" name="command" value="exportxml" />
-      <input type="submit" name="exportxml" value='${this.messages.get("importexport.export")}' />
+      <input type="submit" name="exportxml" value="${this.messages.get("importexport.export")?html}" />
     </form>
   </body>
 </html>
