--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ImportPage.html
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/pages/ImportPage.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <input type="hidden" name="command" value="importxml" />
-      <input type="submit" name="importxml" value='${this.messages.get("importexport.import")}' />
+      <input type="submit" name="importxml" value="${this.messages.get("importexport.import")?html}" />
     </form>
   </body>
 </html>
